# dynatac

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  flash-example.sh  flash.sh  sdkconfig.defaults  special-keys.txt  todo.md
.cargo/: config.toml
core/: Cargo.toml
core/src/: battery.rs  charger.rs  credentials.rs  email.rs  framebuffer.rs  fs.rs  http.rs  keymap.rs  lib.rs  list_selector.rs  lockscreen.rs  network.rs  power.rs  saved_networks.rs  scroll_view.rs  shell.rs  sms.rs  startup.rs  terminal.rs  text_prompt.rs  wifi.rs
core/src/modem/: at.rs  mod.rs
core/src/programs/: battery.rs  curl.rs  echo.rs  email.rs  mod.rs  modem.rs  net.rs  power.rs  sms.rs  whatsapp.rs  wifi.rs
device/: Cargo.toml
device/.cargo/: config.toml
device/examples/: display_hello_world.rs  keyboard_terminal.rs  list_selector_demo.rs  sd_card_test.rs  terminal.rs
device/src/: battery.rs  charger.rs  display.rs  http.rs  i2c_bus.rs  keyboard.rs  main.rs  modem.rs  nvs_credential_store.rs  nvs_network_store.rs  sdcard.rs  sleep.rs  smtp.rs  wifi.rs
examples/: display_hello_world.rs  keyboard_terminal.rs
src/: display.rs  keyboard.rs  main.rs
